--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
     <script type="module" src="src/data/data.js"></script>
   </body>
 </html>
